# petabite

./: .gitignore  README.md  conftest.py  pyproject.toml  train-lora.sh
config/: config.yaml  mlm.yaml  train.yaml
config/trainer/: default.yaml
data/: sample_petase.csv
docs/superpowers/plans/: 2026-06-16-petabite-esmc-activity.md
docs/superpowers/specs/: 2026-06-16-petabite-esmc-activity-design.md
notebooks/: Data-Processing.ipynb  Model.ipynb
run/conf/active_learning/: uncertainty.yaml
run/conf/data/: petase.yaml
run/conf/model/: esmc_lora.yaml
run/pipeline/: active_learning.py
src/petabite/: __init__.py  active_learning.py  mlm_finetune.py  predict.py  train.py
src/petabite/active_learning/: __init__.py  loop.py  selection.py
src/petabite/active_learning/acquisition/: __init__.py  base.py  random_baseline.py  uncertainty.py
src/petabite/data_module/: __init__.py  petase_dataset.py  splits.py  tokenization.py  utils.py
src/petabite/data_module/dataset/: __init__.py  petase_dataset.py
src/petabite/model_module/: __init__.py  model.py  uncertainty.py
src/petabite/model_module/backbone/: __init__.py  esmc_backbone.py  fused_lora.py
src/petabite/model_module/heads/: __init__.py  classification_head.py  regression_head.py
src/petabite/trainer_module/: __init__.py  metrics.py  trainer.py
src/petabite/utils/: __init__.py  env.py  logging.py  registry.py  seed.py
tests/: test_acquisition.py  test_al_loop.py  test_config.py  test_data_io.py  test_dataset.py  test_heads.py  test_metrics.py  test_model.py  test_pipeline_imports.py  test_utils.py
