[project]
name = "petabite"
version = "0.1.0"
description = "ESM-C fine-tuning for PETase activity prediction with active learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.11",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petabite"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
packages = ["petabite"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
