[project]
name = "petabite"
version = "0.1.0"
description = "ESM-C LoRA fine-tuning for PETase activity prediction"
requires-python = ">=3.10"
# Deep-learning / HF stack, installed from the Compute Canada wheelhouse with
# `pip install --no-index <pkgs>`. numpy/scipy/scikit-learn are provided by the
# scipy-stack module on CC; they are listed here so non-CC installs still work.
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.11",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "wandb>=0.17",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "notebook>=7.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]
# The biohub/ESMC-300M checkpoint loads custom modeling code that needs the `esm`
# package. It is not on the wheelhouse, so install it separately (with network):
#   pip install esm@git+https://github.com/Biohub/esm.git@main
esmc = ["esm @ git+https://github.com/Biohub/esm.git@main"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/petabite"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = "src"
packages = ["petabite"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
